--- a/index.html
+++ b/index.html
@@ -32,52 +32,85 @@
 <body class="body">
 
     <header>
-        <div class="navuphead">
-            <div class="time">
-                <div class="headerimg1">
-                    <img src="assets/images/timeofwork.png" alt="">
+        <section class="topnav">
+            <div class="navuphead">
+                <div class="time">
+                    <div class="headerimg1">
+                        <img src="assets/images/timeofwork.png" alt="">
+                    </div>
+                    <div class="textheader">Время работы: пн-пт с 9:00 до 21:00 сб-вс с 10:00 до 20:00</div>
                 </div>
-                <div class="textheader">Время работы: пн-пт с 9:00 до 21:00 сб-вс с 10:00 до 20:00</div>
-            </div>
-            <div class="geo">
-                <div class="headerimg2">
-                    <img src="assets/images/geoposition.png" alt="">
+                <div class="geo">
+                    <div class="headerimg2">
+                        <img src="assets/images/geoposition.png" alt="">
+                    </div>
+                    <div class="textheader">Адрес: ул.Букирева, 15</div>
                 </div>
-                <div class="textheader">Адрес: ул.Букирева, 15</div>
-            </div>
-            <div class="phone">
-                <div class="headerimg3">
-                    <img src="assets/images/telephone.png" alt="">
+                <div class="phone">
+                    <div class="headerimg3">
+                        <img src="assets/images/telephone.png" alt="">
+                    </div>
+                    <div class="textheader">Тел: +7 (999) 999 99 99</div>
                 </div>
-                <div class="textheader">Тел: +7 (999) 999 99 99</div>
             </div>
-        </div>
+        </section>
 
-    <section class="aboutcontainer">
-        <div class="line">
-            <div class="logo">
-                <img src="assets/images/logo.png" alt="">
+        <section class="aboutcontainer">
+            <div class="line">
+                <div class="logo">
+                    <img src="assets/images/logo.png" alt="">
+                </div>
+                <div class="nav">
+                    <a class="nav-item" href="@">Главная страница</a>
+                    <a class="nav-item" href="@">О клинике</a>
+                    <a class="nav-item" href="@">Наши врачи</a>
+
+                    <button class="nav-item">
+                        <img src="assets/images/loggg.png" class="regicon">
+                        Вход
+                    </button>
+                    <button class="nav-item">
+                        <img src="assets/images/registrat.png" class="regicon">
+                        Регистрация
+                </div>
             </div>
-            <div class="nav">
-                <a class="nav-item" href="@">Главная страница</a>
-                <a class="nav-item" href="@">О клинике</a>
-                <a class="nav-item" href="@">Наши врачи</a>
+
+            <div class="info">
+                <div class="bottomnuv">
+                    <div class="woman">
+                        <img src="assets/images/woman.png" class="people">
+                    </div>
+                    <div class="slide-info">
+                        <div class="slide-ellipse">
+                            <div class="textsettings">
+                                <div class="titleinfo">Платные медицинские услуги</div>
+                                <div class="subtitleinfo">
+                                    Услуги, предоставляемые дополнительно к бесплатным медицинским услугам
+                                    в соответствии с действующим законодательством. Не подменяют гарантированную
+                                    гражданам бесплатную медицинскую помощь.
+                                </div>
+                            </div>
+
+                            <button class="textbtn">Подробнее</button>
+
+                        </div>
+                    </div>
+                    <div class="zapis">
+                        <div class="titlezapis">Запись на приём к врачу</div>
+                        <div class="subtittlezapis"><button class="registrationbtn">Зарегистрируйтесь</button> на сайте
+                            или <button class="registrationbtn">авторизуйтесь</button> для возможности записаться.
+                        </div>
+
+                        <button class="zapis-text"><img src="assets/images/health.png" class="health">Записаться<img
+                                src="assets/images/arrow-right.png" class="arrow"></button>
+
+                    </div>
+                    <div class="man">
+                        <img src="assets/images/man.png" class="people2">
+                    </div>
+                </div>
             </div>
-            <div class="registr">
-                <button>
-                    <img src="assets/images/iconvhod.png" class="reg">
-                </button>
-                <button>
-                    <img src="assets/images/iconreg.png" class="reg">
-                </button>
-        </div>
-        </div>
-
-
-        <div class="info">
-
-        </div>
-    </section>
-</header>
+        </section>
+    </header>
 
 </body>
